# DBT3-scripts-for-MySQL

./: AUTHORS  Makefile  Makefile.am  Makefile.in  README  README_VectorWise  config.status  configure  configure.ac  index.html
autom4te.cache/: output.1  requests  traces.0  traces.1
data_collect/: index.html
data_collect/analyzetools/: index.html
data_collect/analyzetools/pgsql/: index.html
data_collect/analyzetools/sapdb/: index.html
data_collect/resulttools/: index.html  parse_ips.pl
data_collect/sapdb/: index.html
dbdriver/: index.html
dbdriver/scripts/: index.html
dbdriver/scripts/sapdb/: index.html
dbgen/: index.html
doc/: index.html
doc/pgsql/: index.html
doc/sapdb/: index.html
examples/: index.html
examples/iostat/: index.html
examples/iostat/ia64/: index.html
examples/pgsql/: index.html
mysql_config/maraidb55/: my.sandbox.cnf_ICP  my.sandbox.cnf_MRR  my.sandbox.cnf_join
mysql_config/mysql56/: my.sandbox.cnf_ICP  my.sandbox.cnf_MRR  my.sandbox.cnf_join
perlmodules/: index.html
perlmodules/Sapdbpms/: index.html
perlmodules/Sapdbpms/DBM/: index.html
perlmodules/Sapdbpms/REPM/: index.html
queries/: index.html
queries/ingres/: 1.sql  10.sql  12.sql  14.sql  15.sql  18.sql  2.sql  20.sql  21.sql  22.sql  3.sql  4.sql  5.sql  6.sql  index.html
queries/ingres_vectorwise/: 1.sql  10.sql  15.sql  15A.sql  19.sql  20.sql  21.sql  22.sql  3.sql  4.sql  index.html
queries/mysql/: 19.sql  3.sql  index.html
queries/pgsql/: index.html
queries/sapdb/: index.html
queries/sqlserver/: 1.sql  10.sql  11.sql  12.sql  13.sql  14.sql  15.sql  16.sql  17.sql  18.sql  19.sql  2.sql  20.sql  21.sql  22.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  9.sql  index.html
scripts/: dbt3_profile  decimal_2.awk  gen_data.sh  gen_html.sh  get_composite.sh  get_config.sh  monitor_huge.sh  monitor_iivwinfo.sh  run_workload.sh  start_sysstats.sh  stop_sysstats.sh
scripts/mysql/: .update_statistics.sh.swp  create_db.sh  create_indexes.sh  create_pk.sh  create_tables.sh  drop_db.sh  drop_tables.sh  get_query_plan.sh  get_version.sh  grant.sh  load_test.sh  mariadb53_profile  mariadb55_profile  mysql55_profile  mysql56_profile  ordered_sets  power_test.sh  power_test_multiple_mysql_versions.sh  precache.sql  run_power_query.sh  run_rf1.sh  run_rf2.sh  run_throughput_stream.sh  sort_flat_files.sh  sort_param  start_db.sh  stop_db.sh  throughput_test.sh  timeout.awk  timeout.sh  update_statistics.sh
scripts/mysql/ddl/: create_pk.sql  customer.sql  lineitem.sql  nation.sql  orders.sql  part.sql  partsupp.sql  region.sql  supplier.sql  tables  time_statistics.sql
src/: Makefile  Makefile.in  get_statement.c  get_time.c  gtime  index.html  parse_query  power
src/dbgen/: Makefile  Makefile.in  dbgen  index.html  param.tmp  qgen  tpcd.h
src/dbgen/.deps/: bcd2.Po  bm_utils.Po  build.Po  driver.Po  load_stub.Po  permute.Po  print.Po  qgen.Po  rnd.Po  speed_seed.Po  text.Po  varsub.Po
src/include/: db.h  index.html
tpch_tools/: Makefile.in  dbgen  index.html  qgen  tpcd.h
tpch_tools/answers/: index.html
tpch_tools/check_answers/: index.html
tpch_tools/queries/: index.html
tpch_tools/reference/: index.html
tpch_tools/tests/: index.html
tpch_tools/variants/: index.html
