#
# This file is released under the terms of the Artistic License.
# Please see the file LICENSE, included in this package, for details.
#
# Copyright (C) 2005 Mark Wong & Open Source Development Labs, Inc.
#

AUTOMAKE_OPTIONS = no-dependencies

SUBDIRS = src tpch_tools scripts/ingres_vectorwise/acid scripts/ingres_vectorwise/acid/cons scripts/ingres_vectorwise/acid/dur

EXTRA_DIST = \
             doc/Makefile \
             doc/dbt3-architecture.sxw \
             doc/dbt3-implement.sxw \
             doc/dbt3-tpch.sxw \
             doc/dbt3-user.tex \
             doc/dbt3-user.pdf \
             doc/pgsql/dbt3-sizing-pg.sxc \
             doc/pgsql/dbt3-user-manual-pg.sxw \
             doc/sapdb/dbt3-sizing.sxc \
             doc/sapdb/dbt3-user-manual.sxw \
             perlmodules/Data_report.pm \
             queries/pgsql/1.sql \
             queries/pgsql/10.sql \
             queries/pgsql/11.sql \
             queries/pgsql/12.sql \
             queries/pgsql/13.sql \
             queries/pgsql/14.sql \
             queries/pgsql/15.sql \
             queries/pgsql/16.sql \
             queries/pgsql/17.sql \
             queries/pgsql/18.sql \
             queries/pgsql/19.sql \
             queries/pgsql/2.sql \
             queries/pgsql/20.sql \
             queries/pgsql/21.sql \
             queries/pgsql/22.sql \
             queries/pgsql/3.sql \
             queries/pgsql/4.sql \
             queries/pgsql/5.sql \
             queries/pgsql/6.sql \
             queries/pgsql/7.sql \
             queries/pgsql/8.sql \
             queries/pgsql/9.sql \
             queries/mysql/1.sql \
             queries/mysql/10.sql \
             queries/mysql/11.sql \
             queries/mysql/12.sql \
             queries/mysql/13.sql \
             queries/mysql/14.sql \
             queries/mysql/15.sql \
             queries/mysql/16.sql \
             queries/mysql/17.sql \
             queries/mysql/18.sql \
             queries/mysql/19.sql \
             queries/mysql/2.sql \
             queries/mysql/20.sql \
             queries/mysql/21.sql \
             queries/mysql/22.sql \
             queries/mysql/3.sql \
             queries/mysql/4.sql \
             queries/mysql/5.sql \
             queries/mysql/6.sql \
             queries/mysql/7.sql \
             queries/mysql/8.sql \
             queries/mysql/9.sql \
             queries/mysql/ddl \
             queries/mysql/ddl/part.sql \
             queries/mysql/ddl/region.sql \
             queries/mysql/ddl/customer.sql \
             queries/mysql/ddl/orders.sql \
             queries/mysql/ddl/partsupp.sql \
             queries/mysql/ddl/nation.sql \
             queries/mysql/ddl/supplier.sql \
             queries/mysql/ddl/lineitem.sql \
             queries/mysql/ddl/power.sql \
             queries/mysql/dll/create_indexes.sql \
             queries/mysql/ddl/nitro \
             queries/mysql/ddl/nitro/part.sql \
             queries/mysql/ddl/nitro/region.sql \
             queries/mysql/ddl/nitro/customer.sql \
             queries/mysql/ddl/nitro/orders.sql \
             queries/mysql/ddl/nitro/partsupp.sql \
             queries/mysql/ddl/nitro/nation.sql \
             queries/mysql/ddl/nitro/supplier.sql \
             queries/mysql/ddl/nitro/lineitem.sql \
             queries/sapdb/1.sql \
             queries/sapdb/10.sql \
             queries/sapdb/11.sql \
             queries/sapdb/12.sql \
             queries/sapdb/13.sql \
             queries/sapdb/14.sql \
             queries/sapdb/15.sql \
             queries/sapdb/16.sql \
             queries/sapdb/17.sql \
             queries/sapdb/18.sql \
             queries/sapdb/18rewrite.sql \
             queries/sapdb/19.sql \
             queries/sapdb/19rewrite.sql \
             queries/sapdb/2.sql \
             queries/sapdb/20.sql \
             queries/sapdb/20rewrite.sql \
             queries/sapdb/21.sql \
             queries/sapdb/22.sql \
             queries/sapdb/22rewrite.sql \
             queries/sapdb/3.sql \
             queries/sapdb/4.sql \
             queries/sapdb/5.sql \
             queries/sapdb/6.sql \
             queries/sapdb/7.sql \
             queries/sapdb/8.sql \
             queries/sapdb/9.sql \
             queries/ingres/1.sql \
             queries/ingres/10.sql \
             queries/ingres/11.sql \
             queries/ingres/12.sql \
             queries/ingres/13.sql \
             queries/ingres/14.sql \
             queries/ingres/15.sql \
             queries/ingres/16.sql \
             queries/ingres/17.sql \
             queries/ingres/18.sql \
             queries/ingres/19.sql \
             queries/ingres/2.sql \
             queries/ingres/20.sql \
             queries/ingres/21.sql \
             queries/ingres/22.sql \
             queries/ingres/3.sql \
             queries/ingres/4.sql \
             queries/ingres/5.sql \
             queries/ingres/6.sql \
             queries/ingres/7.sql \
             queries/ingres/8.sql \
             queries/ingres/9.sql \
             scripts/vmplot.sh \
             scripts/graph_query_time.pl \
             scripts/pgsql/analyze_stats.pl \
             scripts/pgsql/get_power.pl \
             scripts/pgsql/get_throughput.sh \
             scripts/mysql/analyze_stats.pl \
             scripts/mysql/clear-time-statistics.sh \
             scripts/mysql/create_db.sh \
             scripts/mysql/create_indexes.sh \
             scripts/mysql/create_tables.sh \
             scripts/mysql/drop_db.sh \
             scripts/mysql/drop_tables.sh \
             scripts/mysql/get_query_plan.sh \
             scripts/mysql/get_version.sh \
             scripts/mysql/grant.sh \
             scripts/mysql/grant.sql \
             scripts/mysql/init_db.sh \
             scripts/mysql/lockfile.sh \
             scripts/mysql/load_test.sh \
             scripts/mysql/mysql_profile \
             scripts/mysql/ordered_sets \
             scripts/mysql/power_test.sh \
             scripts/mysql/q_time.sh \
             scripts/mysql/record_end.sh \
             scripts/mysql/record_start.sh \
             scripts/mysql/run_power_query.sh \
             scripts/mysql/run_rf1.sh \
             scripts/mysql/run_rf2.sh \
             scripts/mysql/run_throughput_stream.sh \
             scripts/mysql/sort_flat_files.sh \
             scripts/mysql/sort_param \
             scripts/mysql/start_db.sh \
             scripts/mysql/stop_db.sh \
             scripts/mysql/throughput_test.sh \
             scripts/mysql/timeout.sh \
             scripts/mysql/timeout.awk \
             scripts/mysql/update_statistics.sh \
             scripts/ingres/ddl/customer.sql \
             scripts/ingres/ddl/time_statistics.sql \
             scripts/ingres/ddl/supplier.sql \
             scripts/ingres/ddl/region.sql \
             scripts/ingres/ddl/partsupp.sql \
             scripts/ingres/ddl/part.sql \
             scripts/ingres/ddl/orders.sql \
             scripts/ingres/ddl/nation.sql \
             scripts/ingres/ddl/lineitem.sql \
             scripts/ingres/ddl/create_pk.sql \
             scripts/ingres/ddl/create_fk.sql \
             scripts/ingres/ddl/modify_tables.sql \
             scripts/ingres/ddl/grant.sql \
             scripts/ingres/import/header \
             scripts/ingres/import/part.sql \
             scripts/ingres/import/partsupp.sql \
             scripts/ingres/import/lineitem.sql \
             scripts/ingres/import/orders.sql \
             scripts/ingres/import/supplier.sql \
             scripts/ingres/import/customer.sql \
             scripts/ingres/import/nation.sql \
             scripts/ingres/import/region.sql \
             scripts/ingres/get_power_metric.awk \
             scripts/ingres_vectorwise/create_db.sh \
             scripts/ingres_vectorwise/create_tables.sh \
             scripts/ingres_vectorwise/run_power_tests.sh \
             scripts/ingres_vectorwise/start_db.sh \
             scripts/ingres_vectorwise/run_throughput_stream.sh \
             scripts/ingres_vectorwise/create_fk.sh \
             scripts/ingres_vectorwise/stop_db.sh \
             scripts/ingres_vectorwise/reference/results.sf100/power_query21.result \
             scripts/ingres_vectorwise/reference/results.sf100/power_query13.result \
             scripts/ingres_vectorwise/reference/results.sf100/power_query16.result \
             scripts/ingres_vectorwise/reference/results.sf100/power_query10.result \
             scripts/ingres_vectorwise/reference/results.sf100/power_query18.result \
             scripts/ingres_vectorwise/reference/results.sf100/power_query20.result \
             scripts/ingres_vectorwise/reference/results.sf100/power_query15.result \
             scripts/ingres_vectorwise/reference/results.sf100/power_query19.result \
             scripts/ingres_vectorwise/reference/results.sf100/power_query9.result \
             scripts/ingres_vectorwise/reference/results.sf100/power_query1.result \
             scripts/ingres_vectorwise/reference/results.sf100/power_query2.result \
             scripts/ingres_vectorwise/reference/results.sf100/power_query6.result \
             scripts/ingres_vectorwise/reference/results.sf100/power_query12.result \
             scripts/ingres_vectorwise/reference/results.sf100/power_query7.result \
             scripts/ingres_vectorwise/reference/results.sf100/power_query3.result \
             scripts/ingres_vectorwise/reference/results.sf100/power_query22.result \
             scripts/ingres_vectorwise/reference/results.sf100/power_query14.result \
             scripts/ingres_vectorwise/reference/results.sf100/power_query5.result \
             scripts/ingres_vectorwise/reference/results.sf100/power_query8.result \
             scripts/ingres_vectorwise/reference/results.sf100/power_query17.result \
             scripts/ingres_vectorwise/reference/results.sf100/power_query4.result \
             scripts/ingres_vectorwise/reference/results.sf1/13.result \
             scripts/ingres_vectorwise/reference/results.sf1/1.result \
             scripts/ingres_vectorwise/reference/results.sf1/8.result \
             scripts/ingres_vectorwise/reference/results.sf1/16.result \
             scripts/ingres_vectorwise/reference/results.sf1/2.result \
             scripts/ingres_vectorwise/reference/results.sf1/19.result \
             scripts/ingres_vectorwise/reference/results.sf1/9.result \
             scripts/ingres_vectorwise/reference/results.sf1/17.result \
             scripts/ingres_vectorwise/reference/results.sf1/4.result \
             scripts/ingres_vectorwise/reference/results.sf1/11.result \
             scripts/ingres_vectorwise/reference/results.sf1/3.result \
             scripts/ingres_vectorwise/reference/results.sf1/20.result \
             scripts/ingres_vectorwise/reference/results.sf1/12.result \
             scripts/ingres_vectorwise/reference/results.sf1/14.result \
             scripts/ingres_vectorwise/reference/results.sf1/22.result \
             scripts/ingres_vectorwise/reference/results.sf1/18.result \
             scripts/ingres_vectorwise/reference/results.sf1/15.result \
             scripts/ingres_vectorwise/reference/results.sf1/21.result \
             scripts/ingres_vectorwise/reference/results.sf1/10.result \
             scripts/ingres_vectorwise/reference/results.sf1/6.result \
             scripts/ingres_vectorwise/reference/results.sf1/7.result \
             scripts/ingres_vectorwise/reference/results.sf1/5.result \
             scripts/ingres_vectorwise/reference/cardinality.sf3/supplier \
             scripts/ingres_vectorwise/reference/cardinality.sf3/lineitem \
             scripts/ingres_vectorwise/reference/cardinality.sf3/customer \
             scripts/ingres_vectorwise/reference/cardinality.sf3/nation \
             scripts/ingres_vectorwise/reference/cardinality.sf3/orders \
             scripts/ingres_vectorwise/reference/cardinality.sf3/region \
             scripts/ingres_vectorwise/reference/cardinality.sf3/part \
             scripts/ingres_vectorwise/reference/cardinality.sf3/partsupp \
             scripts/ingres_vectorwise/reference/results.sf30/8.result \
             scripts/ingres_vectorwise/reference/results.sf30/2.result \
             scripts/ingres_vectorwise/reference/results.sf30/19.result \
             scripts/ingres_vectorwise/reference/results.sf30/9.result \
             scripts/ingres_vectorwise/reference/results.sf30/4.result \
             scripts/ingres_vectorwise/reference/results.sf30/3.result \
             scripts/ingres_vectorwise/reference/results.sf30/12.result \
             scripts/ingres_vectorwise/reference/results.sf30/14.result \
             scripts/ingres_vectorwise/reference/results.sf30/22.result \
             scripts/ingres_vectorwise/reference/results.sf30/18.result \
             scripts/ingres_vectorwise/reference/results.sf30/10.result \
             scripts/ingres_vectorwise/reference/results.sf30/6.result \
             scripts/ingres_vectorwise/reference/results.sf30/7.result \
             scripts/ingres_vectorwise/reference/results.sf30/5.result \
             scripts/ingres_vectorwise/reference/cardinality.sf30/supplier \
             scripts/ingres_vectorwise/reference/cardinality.sf30/lineitem \
             scripts/ingres_vectorwise/reference/cardinality.sf30/customer \
             scripts/ingres_vectorwise/reference/cardinality.sf30/nation \
             scripts/ingres_vectorwise/reference/cardinality.sf30/orders \
             scripts/ingres_vectorwise/reference/cardinality.sf30/region \
             scripts/ingres_vectorwise/reference/cardinality.sf30/part \
             scripts/ingres_vectorwise/reference/cardinality.sf30/partsupp \
             scripts/ingres_vectorwise/reference/results.sf10/1.result \
             scripts/ingres_vectorwise/reference/results.sf10/8.result \
             scripts/ingres_vectorwise/reference/results.sf10/2.result \
             scripts/ingres_vectorwise/reference/results.sf10/19.result \
             scripts/ingres_vectorwise/reference/results.sf10/9.result \
             scripts/ingres_vectorwise/reference/results.sf10/4.result \
             scripts/ingres_vectorwise/reference/results.sf10/3.result \
             scripts/ingres_vectorwise/reference/results.sf10/12.result \
             scripts/ingres_vectorwise/reference/results.sf10/14.result \
             scripts/ingres_vectorwise/reference/results.sf10/22.result \
             scripts/ingres_vectorwise/reference/results.sf10/18.result \
             scripts/ingres_vectorwise/reference/results.sf10/10.result \
             scripts/ingres_vectorwise/reference/results.sf10/6.result \
             scripts/ingres_vectorwise/reference/results.sf10/7.result \
             scripts/ingres_vectorwise/reference/results.sf10/5.result \
             scripts/ingres_vectorwise/reference/cardinality.sf1/supplier \
             scripts/ingres_vectorwise/reference/cardinality.sf1/lineitem \
             scripts/ingres_vectorwise/reference/cardinality.sf1/customer \
             scripts/ingres_vectorwise/reference/cardinality.sf1/nation \
             scripts/ingres_vectorwise/reference/cardinality.sf1/orders \
             scripts/ingres_vectorwise/reference/cardinality.sf1/region \
             scripts/ingres_vectorwise/reference/cardinality.sf1/part \
             scripts/ingres_vectorwise/reference/cardinality.sf1/partsupp \
             scripts/ingres_vectorwise/reference/results.sf3/1.result \
             scripts/ingres_vectorwise/reference/results.sf3/8.result \
             scripts/ingres_vectorwise/reference/results.sf3/2.result \
             scripts/ingres_vectorwise/reference/results.sf3/19.result \
             scripts/ingres_vectorwise/reference/results.sf3/4.result \
             scripts/ingres_vectorwise/reference/results.sf3/3.result \
             scripts/ingres_vectorwise/reference/results.sf3/12.result \
             scripts/ingres_vectorwise/reference/results.sf3/14.result \
             scripts/ingres_vectorwise/reference/results.sf3/22.result \
             scripts/ingres_vectorwise/reference/results.sf3/18.result \
             scripts/ingres_vectorwise/reference/results.sf3/10.result \
             scripts/ingres_vectorwise/reference/results.sf3/6.result \
             scripts/ingres_vectorwise/reference/results.sf3/7.result \
             scripts/ingres_vectorwise/reference/results.sf3/5.result \
             scripts/ingres_vectorwise/reference/cardinality.sf100/supplier \
             scripts/ingres_vectorwise/reference/cardinality.sf100/lineitem \
             scripts/ingres_vectorwise/reference/cardinality.sf100/customer \
             scripts/ingres_vectorwise/reference/cardinality.sf100/nation \
             scripts/ingres_vectorwise/reference/cardinality.sf100/orders \
             scripts/ingres_vectorwise/reference/cardinality.sf100/region \
             scripts/ingres_vectorwise/reference/cardinality.sf100/part \
             scripts/ingres_vectorwise/reference/cardinality.sf100/partsupp \
             scripts/ingres_vectorwise/reference/cardinality.sf10/supplier \
             scripts/ingres_vectorwise/reference/cardinality.sf10/lineitem \
             scripts/ingres_vectorwise/reference/cardinality.sf10/customer \
             scripts/ingres_vectorwise/reference/cardinality.sf10/nation \
             scripts/ingres_vectorwise/reference/cardinality.sf10/orders \
             scripts/ingres_vectorwise/reference/cardinality.sf10/region \
             scripts/ingres_vectorwise/reference/cardinality.sf10/part \
             scripts/ingres_vectorwise/reference/cardinality.sf10/partsupp \
             scripts/ingres_vectorwise/throughput_test.sh \
             scripts/ingres_vectorwise/grant.sh \
             scripts/ingres_vectorwise/load_test.sh \
             scripts/ingres_vectorwise/drop_db.sh \
             scripts/ingres_vectorwise/show_power_test_results.awk \
             scripts/ingres_vectorwise/power_test.sh \
             scripts/ingres_vectorwise/ddl/customer.sql \
             scripts/ingres_vectorwise/ddl/supplier.sql \
             scripts/ingres_vectorwise/ddl/create_pk.sql \
             scripts/ingres_vectorwise/ddl/region.sql \
             scripts/ingres_vectorwise/ddl/nation.sql \
             scripts/ingres_vectorwise/ddl/create-ingres.sql \
             scripts/ingres_vectorwise/ddl/create_fk.sql \
             scripts/ingres_vectorwise/ddl/orders.sql \
             scripts/ingres_vectorwise/ddl/header \
             scripts/ingres_vectorwise/ddl/part.sql \
             scripts/ingres_vectorwise/ddl/lineitem.sql \
             scripts/ingres_vectorwise/ddl/grant.sql \
             scripts/ingres_vectorwise/ddl/partsupp.sql \
             scripts/ingres_vectorwise/location_names.template \
             scripts/ingres_vectorwise/sort_flat_files.sh \
             scripts/ingres_vectorwise/sort_param \
             scripts/ingres_vectorwise/import/customer.sql \
             scripts/ingres_vectorwise/import/supplier.sql \
             scripts/ingres_vectorwise/import/region.sql \
             scripts/ingres_vectorwise/import/nation.sql \
             scripts/ingres_vectorwise/import/orders.sql \
             scripts/ingres_vectorwise/import/header \
             scripts/ingres_vectorwise/import/part.sql \
             scripts/ingres_vectorwise/import/lineitem.sql \
             scripts/ingres_vectorwise/import/partsupp.sql \
             scripts/ingres_vectorwise/ingres_vectorwise_profile \
             scripts/ingres_vectorwise/show_throughput_test_results.awk \
             scripts/ingres_vectorwise/run_power_query.sh \
             scripts/ingres_vectorwise/get_power_metric.awk \
             scripts/ingres_vectorwise/update_statistics.sh \
             scripts/ingres_vectorwise/create_si.sh \
             scripts/ingres_vectorwise/create_pk.sh \
             scripts/ingres_vectorwise/secondary_list
